--- a/index.html
+++ b/index.html
@@ -683,28 +683,24 @@
                                 <br/>
                                 My inbox is always open!</h2>
                                 <ul class="social-links list-unstyled mt-4">
-                                    <li><a href="mailto:mukundshukla000@gmail.com">
+                                    <li><a href="mailto:nraj9141@gmail.com">
                                         <ion-icon name="mail-outline"></ion-icon>
                                     </a></li>
-                                    <li><a href="https://github.com/mukundtheamateur">
+                                    <li><a href="https://github.com/nraj9141">
                                             <ion-icon name="logo-github"></ion-icon>
                                         </a></li>
-                                    <li><a href="https://www.linkedin.com/in/mukund-shukla-361ba9190/">
+                                    <li><a href="https://www.linkedin.com/in/nikhil-raj-8b1ba31aa/">
                                         <ion-icon name="logo-linkedin"></ion-icon>
                                     </a></li>
-                                <li><a href="https://www.facebook.com/mukund.shukla.58/">
+                                <li><a href="https://www.facebook.com/raj.sachin.940/">
                                     <ion-icon name="logo-facebook"></ion-icon>
                                 </a></li>
-                                <li><a href="https://twitter.com/MukundS91537446/">
-                                        <ion-icon name="logo-twitter"></ion-icon>
-                                    </a></li>
-                                <li><a href="https://www.instagram.com/maimukundhoon/">
+                                
+                                <li><a href="https://www.instagram.com/nraj9141/">
                                     <ion-icon name="logo-instagram"></ion-icon>
                                     </a></li>
-                                <li><a href="https://dev.to/mukundtheamateur">
-                                    <ion-icon name="logo-medium"></ion-icon>
-                                    </a></li>
-                                <li><a href="https://www.youtube.com/channel/UCAzzBz6fOpec2ewA_8Br7Lg">
+                                
+                                <li><a href="https://www.youtube.com/channel/UClU4Zv9w9GTv1_nSz7arUmA">
                                     <ion-icon name="logo-youtube"></ion-icon>
                                     </a></li>
                             </ul>
