--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </p>
                 </div>
                 <div class="col-lg-4 text-center my-auto pb-5 rounded-circle"><img class="img-fluid rounded-circle"
-                        src="./profile-pic.jpg"></div>
+                        src="./profile-pic2.jpg"></div>
             </div>
         </section>
 
