--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                         </div>
                     </div>
                 </div> -->
-        </section>  -->
+        </section> 
         <section>
             <h1 class="display-4 mt-5">Let's Talk</h1>
             <h1 class="bold-text bg-text">Contact</h1>
@@ -706,13 +706,34 @@
                             </ul>
                             </div>
                     </div>
+
+                    
                 <div class="mt-5 mb-5 text-center">
                     <h4>May the Source be with you 🚀</h1>
                 </div>
+                <div id="disqus_thread"></div>
         </section>
     </div>
 
     <!-- Scripts -->
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://https-github-com-nraj9141-portfolio-web.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
@@ -720,6 +741,7 @@
     <script src="https://kit.fontawesome.com/e5efaf1dce.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="gradient.js"></script>
+
 
 </body>
 
